examples/test/testpolicy6050.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6050
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key17: value40
      key22: value5
      key27: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value22
      podSelector:
        matchLabels:
          key26: value46
